--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,4 +22,7 @@ footer {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   background-color: rgb(231, 222, 237);
+  height: 40px;
+  padding-top: 10px;
 }
+
